<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.iteso.erickgarcia.sesion3interfazdeusuario.MainActivity">

    <include layout="@layout/layout_header"
        android:id="@+id/layoutHeader"/>

    <include layout="@layout/layout_footer"
        android:id="@+id/layoutFooter"/>

    <EditText
        android:id="@+id/editTextCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutHeader"
        android:hint="@string/codigo"/>

    <EditText
        android:id="@+id/editTextLibro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCodigo"
        android:hint="@string/nombreLibro"/>

    <TextView
        android:id="@+id/textViewEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLibro"
        android:text="@string/estado"/>

    <Spinner
        android:id="@+id/spinnerEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewEstado"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:entries="@array/arrayEstado"/>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerEstado"
        android:layout_marginTop="14dp"
        android:textColor="@color/Letra"
        android:background="@color/colorGuardar"
        android:text="@string/guardar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnGuardar"
        android:layout_marginTop="14dp"
        android:textColor="@color/Letra"
        android:background="@color/colorCancelar"
        android:text="@string/cancelar" />
</RelativeLayout>
